<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/CreateUserBirthday"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/CreateUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/CreateUserNameHint" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/CreateUserLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/CreateUserLastNameHint" />

    <EditText
        android:id="@+id/CreateUserEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/CreateUserEMailHint"
        android:inputType="textEmailAddress" />

    <DatePicker
        android:id="@+id/datePicker1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <CheckBox
        android:id="@+id/CreateUserAdmin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/CreateUserAdminCheckbox" />

    <Button
        android:id="@+id/CreateUserButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/CreateUserButton" />

</LinearLayout>