<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.01"
        android:gravity="center_vertical"
        android:text="@string/LoginIntro" />

    <EditText
        android:id="@+id/LoginMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.01"
        android:ems="10"
        android:hint="@string/LoginMailExample" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/LoginVorname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.01"
        android:ems="10"
        android:hint="@string/LoginVorname" />

    <Button
        android:id="@+id/LoginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginTop="20dp"
        android:text="@string/LoginButton" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.11"
        android:orientation="vertical" >
    </LinearLayout>

</LinearLayout>