<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TerminUebersichtTitel"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TableLayout
        style="@style/table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/Datum"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:width="80dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/Kurzbeschreibung"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </TableRow>

    </TableLayout>

    <TableLayout
        android:id="@+id/TerminUebersichtTabelle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical" >

    </TableLayout>

    <Button
        android:id="@+id/TerminUebersichtLogoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/TerminUebersichtLogoutButton" />

    <Button
        android:id="@+id/TerminUebersichtTerminErstellenButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/TerminUebersichtTerminErstellenButton"
        android:visibility="visible" />

</LinearLayout>